--- a/app/src/main/res/layout/item_image_with_text.xml
+++ b/app/src/main/res/layout/item_image_with_text.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="256dp"
-    android:layout_marginTop="48dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_global"/>
+        android:src="@drawable/ic_global" />
+
     <TextView
         android:id="@+id/tv_info"
         style="@style/text_0e1214_20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="18dp"
         android:layout_gravity="bottom"
-        android:text="推荐人员层级信息" />
-</FrameLayout>
+        android:layout_marginLeft="18dp" />
+</LinearLayout>
