--- a/app/src/main/res/layout/activity_system_notice.xml
+++ b/app/src/main/res/layout/activity_system_notice.xml
@@ -6,24 +6,23 @@
     android:background="@drawable/icon_background">
 
     <include layout="@layout/item_title_no_right"/>
-    <include layout="@layout/item_image"/>
-    <LinearLayout
+    <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/pfl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="18dp"
-        >
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="1000"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_resistance="1.7">
 
-        <TextView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/one_level_height"
-            android:text="系统公告"
-            style="@style/text_0e1214_17" />
-
-       <ListView
-           android:id="@+id/lv_sys_notice"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            cube_ptr:showDividers="middle" />
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
 </LinearLayout>
