--- a/app/src/main/res/layout/activity_contribute_value_record.xml
+++ b/app/src/main/res/layout/activity_contribute_value_record.xml
@@ -12,53 +12,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="18dp"
-        android:background="@drawable/icon_background"
         android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/one_level_height"
-                android:text="贡献值记录"
-                style="@style/text_0e1214_17" />
-
-                <TextView
-                    style="@style/text_0e1214_15"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="我的贡献值" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv"
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/pfl"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_marginTop="18dp"-->
-            <!--android:gravity="center"-->
-            <!--&gt;-->
-            <!--<Button-->
-                <!--android:id="@+id/but_previous_page"-->
-                <!--android:layout_width="69dp"-->
-                <!--android:layout_height="32dp"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:text="上一页"-->
-                <!--android:background="@drawable/selector_button_bg"-->
-                <!--style="@style/text_0e1214_15"/>-->
-
-            <!--<View-->
-                <!--android:layout_width="30dp"-->
-                <!--android:layout_height="1dp"/>-->
-            <!--<Button-->
-                <!--android:id="@+id/but_next_page"-->
-                <!--android:layout_width="69dp"-->
-                <!--android:layout_height="32dp"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:text="下一页"-->
-                <!--android:background="@drawable/selector_button_bg"-->
-                <!--style="@style/text_0e1214_15"/>-->
-        <!--</LinearLayout>-->
+            android:layout_height="match_parent"
+            cube_ptr:ptr_duration_to_close="200"
+            cube_ptr:ptr_duration_to_close_header="1000"
+            cube_ptr:ptr_keep_header_when_refresh="true"
+            cube_ptr:ptr_pull_to_fresh="false"
+            cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+            cube_ptr:ptr_resistance="1.7" >
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:layout_marginTop="9dp"
+                cube_ptr:showDividers="middle"
+                />
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
     </LinearLayout>
 </LinearLayout>
