--- a/app/src/main/res/layout/activity_shopping_record.xml
+++ b/app/src/main/res/layout/activity_shopping_record.xml
@@ -6,27 +6,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/icon_background"
-    tools:context="cn.cnlinfo.ccf.activity.Shopping_Record_Activity">
+    tools:context="cn.cnlinfo.ccf.activity.ShoppingRecordActivity">
     <include layout="@layout/item_title_no_right"/>
-    <LinearLayout
+    <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/pfl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="18dp"
-        android:background="@drawable/icon_background"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/one_level_height"
-            android:text="购物记录"
-            style="@style/text_0e1214_17" />
-
-
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="1000"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_resistance="1.7" >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
-
-
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:layout_marginTop="9dp"
+            cube_ptr:showDividers="middle"
+            />
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
 </LinearLayout>
