--- a/app/src/main/res/layout/fragment_trading_center.xml
+++ b/app/src/main/res/layout/fragment_trading_center.xml
@@ -144,7 +144,7 @@
                         android:entries="@array/spinner_trad_type"
                         />
                 </LinearLayout>
-                <LinearLayout
+             <!--   <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="9dp">
@@ -165,7 +165,7 @@
                         android:hint="价格"
                         android:maxLength="11"
                         android:maxLines="1" />
-                </LinearLayout>
+                </LinearLayout>-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
