--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -74,6 +74,58 @@
                 android:text="11111"
                 />
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="支付宝账号:"
+            android:layout_weight="3"
+            />
+        <TextView
+            android:id="@+id/tv_alipay_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="微信账号:"
+            android:layout_weight="3"
+            />
+        <TextView
+            android:id="@+id/tv_weixin_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="银行账号:"
+            android:layout_weight="3"
+            />
+        <TextView
+            android:id="@+id/tv_bank_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -213,17 +265,14 @@
             style="@style/text_0e1214_15"
             />
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ll_content"
+    <Button
+        android:id="@+id/btn_show_proof"
         android:layout_width="match_parent"
-        android:layout_height="240dp">
-        <com.bm.library.PhotoView
-            android:id="@+id/img1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:src="@drawable/icon_sweep"/>
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        style="@style/text_0e1214_15"
+        android:text="查看凭证"
+        android:background="@drawable/selector_button_bg"
+        />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
