--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -21,8 +21,7 @@
         android:layout_gravity="center"
         android:singleLine="true"
         android:maxEms="15"
-        android:maxLength="20"
-        android:text="登录" />
+        android:maxLength="20"/>
 
         <ImageButton
             android:id="@+id/ibt_add"
