--- a/app/src/main/res/layout/item_trading_list.xml
+++ b/app/src/main/res/layout/item_trading_list.xml
@@ -1,155 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="18dp"
-    android:padding="18dp"
-    android:background="@drawable/payment_voucher_shape">
+    android:background="@color/color_white_ffffff">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/tv_trading_type"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="#000"
             android:textSize="20sp"
-            android:textColor="#000"
-            android:text="挂卖"
-            />
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:text="2017-11-27   17:00"
-            style="@style/text_66000000_15"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="18dp"
-            android:text="交易状态:"
-            style="@style/text_66000000_15"
-            android:gravity="center"
-            />
-
-        <Button
-            android:id="@+id/btn_trading_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:textSize="25sp"
-            android:background="@drawable/selector_button_bg"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="9dp"
-            android:background="#cccccc"
-            />
-
+            android:text="挂买" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="9dp"
-            >
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                style="@style/text_66000000_15"
-                android:text="用户ID："
-                />
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <RatingBar
+                    android:id="@+id/tv_user_level"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:progressTint="#FFD700"
+                    android:stepSize="1"
+                    style="?android:attr/ratingBarStyleSmall" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_user_id"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="7"
-                style="@style/text_0e1214_15"
-                android:text="11111"
-                />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="15231111111" />
         </LinearLayout>
-
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="9dp"
-            >
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                style="@style/text_66000000_15"
-                android:text="用户级别："
-                />
-
+                android:layout_marginLeft="5dp"
+                android:text="CCF :  " />
             <TextView
-                android:id="@+id/tv_user_level"
-                android:layout_width="0dp"
+                android:id="@+id/tv_ccf_number"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="7"
-                style="@style/text_0e1214_15"
-                android:text="11111"
-                />
+                android:text="100" />
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="9dp"
-        >
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            style="@style/text_66000000_15"
-            android:text="碳控因子:"
-            />
-
-        <TextView
-            android:id="@+id/tv_ccf_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="7"
-            style="@style/text_0e1214_15"
-            android:text="11111"
-            />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="9dp"
-        >
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            style="@style/text_66000000_15"
-            android:text="当前价格:"
-            />
-
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_current_price"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="7"
-            style="@style/text_0e1214_15"
-            android:text="11111"
-            />
+            android:gravity="center"
+            android:text="0.102"
+            android:textColor="#ff0000"
+            android:textSize="20dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="$"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="#ff0000"
+            android:layout_weight="3"/>
     </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="9dp"
-            android:background="#cccccc"
-            />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="0.5">
+        <Button
+            android:id="@+id/btn_trading_status"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:background="@drawable/selector_button_bg"
+            android:text="购买" />
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:text="2018/1/16"
+            android:layout_marginTop="8dp" />
+    </LinearLayout>
+
+
 </LinearLayout>
