--- a/app/src/main/res/layout/activity_order_center.xml
+++ b/app/src/main/res/layout/activity_order_center.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/icon_background"
     tools:context="cn.cnlinfo.ccf.activity.OrderCenterActivity">
 
-    <include layout="@layout/item_title_no_right"/>
+    <include layout="@layout/item_title"/>
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
         xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pfl"
