--- a/app/src/main/res/layout/activity_basic_info.xml
+++ b/app/src/main/res/layout/activity_basic_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:jp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,6 +20,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_margin="18dp"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             >
 
             <LinearLayout
@@ -69,6 +72,7 @@
                     android:gravity="center"
                     android:hint="11位手机号"
                     android:digits="@string/input_impose_num"
+                    jp:tipMessage = "手机号格式不正确，请重新输入"
                     android:inputType="text"
                     android:maxLength="11"
                     android:maxLines="1"
@@ -89,21 +93,8 @@
                     style="@style/text_0e1214_15"
                     android:text="证件类型" />
 
-                <!--<cn.cnlinfo.ccf.view.CleanEditText-->
-                    <!--android:id="@+id/et_type_of_certificate"-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_weight="3"-->
-                    <!--android:background="@drawable/edit_text_style"-->
-                    <!--android:gravity="center"-->
-                    <!--android:hint="身份证/护照/驾驶本"-->
-                    <!--android:inputType="text"-->
-                    <!--android:maxLength="16"-->
-                    <!--android:maxLines="1"-->
-                    <!--style="@style/text_0e1214_15"-->
-                    <!--/>-->
-
                 <Spinner
+                    android:id="@+id/sp_certificate_type"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
@@ -137,6 +128,7 @@
                     android:digits="@string/input_impose_num_upper_case"
                     android:inputType="text"
                     android:maxLength="18"
+                    jp:tipMessage = "证件号格式不正确，请重新输入"
                     android:maxLines="1"
                     style="@style/text_0e1214_15"
                     />
@@ -221,6 +213,7 @@
                     android:gravity="center"
                     android:hint="银行卡号"
                     style="@style/text_0e1214_15"
+                    jp:tipMessage = "银行卡号格式不正确，请重新输入"
                     android:inputType="text"
                     android:maxLength="21"
                     android:maxLines="1"
@@ -253,7 +246,7 @@
                     android:maxLines="1"
                     />
             </LinearLayout>
-           <!-- <LinearLayout
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp">
@@ -263,24 +256,24 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/text_0e1214_15"
-                android:text="支付宝姓名" />
+                android:text="支付宝昵称" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/et_alipay_name"
+                android:id="@+id/et_alipay_nickname"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:hint="支付宝姓名"
+                android:hint="支付宝昵称"
                 android:inputType="text"
                 android:maxLength="16"
                 android:maxLines="1"
                 style="@style/text_0e1214_15"
                 />
-        </LinearLayout>-->
+        </LinearLayout>
 
-            <!--<LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp">
@@ -305,7 +298,7 @@
                     android:maxLength="16"
                     android:maxLines="1"
                     />
-            </LinearLayout>-->
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
